--- a/AvengersDKPTool/AvengersDKPTool/AvengersDKPTool.csproj
+++ b/AvengersDKPTool/AvengersDKPTool/AvengersDKPTool.csproj
@@ -7,7 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="check.png" />
+    <None Remove="cross.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Ookii.Dialogs.Wpf.NETCore" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="check.png" />
+    <Resource Include="cross.png" />
   </ItemGroup>
 
 </Project>
